[project]
name = "langchain-deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.14.0",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "ruff>=0.15.15",
]
